AC_PREREQ(2.57)
AC_INIT(mod_bcg729, 19.12, sipx-dev@list.sipfoundry.org)
AC_CONFIG_AUX_DIR(config)
AM_INIT_AUTOMAKE(foreign tar-ustar)
m4_include([config/general.m4])
m4_include([config/sipXlib.m4])
SFAC_INIT_FLAGS
m4_include([config/java.m4])
m4_include([config/java2.m4])
AC_CONFIG_FILES([
    Makefile
])
AC_OUTPUT
